# offload

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  coverage.yml  test.yml
offload/: application.py  cli.py  constants.py  photo_offloader.py  video_offloader.py
tests/: test_application.py  test_cli.py  test_photo_offloader.py  test_video_offloader.py
