[project]
name = "offload"
version = "0.0.0"
description = "Offload moves photos off your phone into safe storage. Back up to external drives and manage your photo flow through a clean, API first CLI built to grow with you."
authors = [
    {name = "Peter Han",email = "git@peterhan.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pillow (>=11.0.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
