[project]
name = "offload"
version = "0.0.0"
description = "CLI tool to organize photos and videos by extracting EXIF metadata. Automatically creates structured directories and supports archiving to zip files."
authors = [
    {name = "Peter Han",email = "git@peterhan.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pillow-heif (>=1.1.1,<2.0.0)",
    "pyexiftool (>=0.5.6,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[project.scripts]
offload = "offload.cli:main"
